<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Awesome Telegram Bot</string>

    <string name="lang_code">en</string>

    <string name="menu_account">Accounts</string>
    <string name="menu_functions">Functions</string>
    <string name="menu_add_bot">Add Bot</string>
    <string name="menu_join_group">Join Group</string>
    <string name="menu_github">Star on GitHub</string>
    <string name="menu_export">Export Database to SD Card</string>
    <string name="menu_about">About</string>

    <string name="title_activity_add_bot">New Bot</string>
    <string name="title_activity_bot_api">Bot API</string>
    <string name="title_activity_telegraph">Telegraph</string>
    <string name="title_activity_webhook">Webhook Debugger</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_favorite">Favorites</string>
    <string name="title_activity_add_favorite">Add Favorite</string>
    <string name="title_activity_about">About This App</string>

    <string name="no_bot_placeholder">No Bot yet, please click + to add one.</string>
    <string name="not_normal_bot">Please use Normal Bot Token</string>

    <string name="add_bot_token">Your Bot Token</string>
    <string name="add_bot_name">Nickname</string>
    <string name="bot_info">Bot Info</string>
    <string name="add_bot_description">Please obtain Token via https://t.me/BotFather</string>
    <string name="add_bot_name_invalid">Nickname Invalid, please check again.</string>
    <string name="add_bot_token_invalid">Token format invalid</string>
    <string name="token_unauthorized">This Bot Token seems to BROKEN, please edit or remove this.</string>

    <string name="no_bot_warning">Didn\'t select bot token, please add one first.</string>
    <string name="no_bot_selected">You didn\'t select your bot.</string>
    <string name="ask_add_bot_title">New Bot</string>
    <string name="ask_add_bot_msg">Do you want to add new bot?</string>

    <string name="del_bot_confirm_title">Delete Bot</string>
    <string name="del_bot_confirm_msg">Are you sure you want to delete this bot?</string>

    <string name="field_required">This field is required.</string>
    <string name="no_context_yet">No Context Yet.</string>
    <string name="powered_by">Powered by Awesome Telegram Bot</string>
    <string name="param_out_of_range">Number must in range %1$d - %2$d.</string>

    <string name="paload">Payload</string>
    <string name="webhook_url">Webhook URL</string>

    <string name="file_downloader">File Downloader</string>
    <string name="file_id">File ID</string>
    <string name="file_downloader_description">File will automatically open when download complete.\nAll Downloaded File will Storaged in /sdcard/TeleBot Directory.</string>

    <string name="add_fav_prompt">Select kind</string>
    <string name="add_fav_value_hint">Your Data</string>
    <string name="add_fav_name_hint">Kindly Name</string>

    <string name="setting_sharing">Sharing Options</string>
    <string name="setting_upload">Upload to Sharing Platform</string>
    <string name="setting_upload_description">It will generate URL of request, in order to prevent spam, this will send your token for verifying.</string>
    <string name="setting_screenshot">Screenshot</string>
    <string name="setting_screenshot_description">Screenshots will be saved in /sdcard/TeleBot, may be an empty image in some old device due to the out-of-memory problem.</string>
    <string name="setting_copy">Auto Copy Option</string>
    <string name="setting_share">Pop-up Share Chooser</string>

    <string-array name="setting_copy_options">
        <item>Only URL (Recommended)</item>
        <item>URL and Request JSON</item>
        <item>Nothing</item>
    </string-array>

    <string-array name="setting_share_options">
        <item>URL</item>
        <item>Photo</item>
        <item>Photo with URL as caption</item>
        <item>Nothing</item>
    </string-array>

    <string name="save_db">Save Databases</string>
    <string name="mkdir_fail">Fail to create backup director</string>
    <string name="db_export_fail">Database export fail\nReason:</string>
    <string name="export_to">"Exported to "</string>

    <string name="footer_rate_title">Rate this Application</string>
    <string name="footer_rate_msg">Click GO if you like it :)</string>
    <string name="footer_rate_yes">GO</string>
    <string name="footer_rate_no">Not now</string>

    <string name="method">Method</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="copy">Copy</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share">Share</string>
    <string name="screenshot">Screenshot</string>
    <string name="request">Request</string>
    <string name="response">Response</string>
    <string name="copy_request">Copy Request</string>
    <string name="copy_response">Copy Response</string>

    <string name="nav_header_photo" translatable="false">Bot Profile Photo</string>
    <string name="nav_header_default_title" translatable="false">No Bot</string>
    <string name="nav_footer" translatable="false">%1$s\nv%2$s (%3$s)</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="bot_token_regex" translatable="false">[0-9]{5,10}:[A-Za-z0-9_-]*</string>
    <string name="nav_header_default_subtitle" translatable="false">12345:AAJqs_w-4</string>
    <string name="github_url" translatable="false">https://github.com/Sea-n/Android-TG-Bot</string>
    <string name="telegram_group_join_link" translatable="false">https://t.me/AwesomeTeleBot</string>
    <string name="app_link_text" translatable="false">\@AwesomeTeleBot</string>
</resources>
