<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="taipei.sean.telegram.botplayground.activity.AddBotActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_bot_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_bot_token"
            android:inputType="text|textNoSuggestions|textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_bot_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_bot_name"
            android:inputType="textAutoComplete"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_bot_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/bot_info" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_bot_submit"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/done"
        android:textStyle="bold" />

    <TextView
        android:autoLink="web"
        android:textColorLink="@color/colorLink"
        android:text="@string/add_bot_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
