<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="taipei.sean.telegram.botplayground.activity.FileDownloadActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <taipei.sean.telegram.botplayground.InstantComplete
            android:id="@+id/file_download_file_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/file_id"
            android:inputType="text|textNoSuggestions"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/file_download_submit"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/file_download_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/file_downloader_description" />
</LinearLayout>
