<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="taipei.sean.telegram.botplayground.activity.PWRTelegramActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <taipei.sean.telegram.botplayground.InstantComplete
            android:id="@+id/pwrtelegram_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/method"
            android:inputType="text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:text="@string/pwrtelegram_default_method" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/pwrtelegram_inputs"
        android:layout_width="match_parent"
        android:layout_height="0sp" />

    <Button
        android:id="@+id/pwrtelegram_submit"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/pwrtelegram_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="@string/no_context_yet" />
    </ScrollView>
</LinearLayout>
